--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,23 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta http-equiv="Content-language" content="en">
+    <meta name="author" content="Antoni André">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>vue-cal</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Material+Icons">
+    <meta name="description" content="A Vue JS full calendar, no dependency, no BS. :metal:">
+    <meta name="keywords" content="Vue full calendar, vue calendar, vue cal, vuecal, vue">
+    <meta property="og:locale" content="en_US">
+    <meta property="og:site_name" content="Vue Cal">
+    <meta property="og:url" content="https://antoniandre.github.io/vue-cal">
+    <meta property="og:type" content="article">
+    <meta property="article:author" content="Antoni André">
+    <meta property="og:title" content="Vue Cal - Documentation">
+    <meta property="og:description" content="Vue Cal is a Full Calendar for Vue JS">
+    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <meta itemprop="name" content="Vue Cal - Documentation">
+    <meta itemprop="description" content="Vue Cal is a Full Calendar for Vue JS">
+    <title>Vue Cal - Documentation</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700|Material+Icons">
   </head>
   <body>
     <noscript>
