--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
     <meta itemprop="description" content="Vue Cal is a Full Calendar for Vue JS">
     <title>Vue Cal - Documentation</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700|Material+Icons">
+    <link href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" rel="stylesheet">
   </head>
   <body>
     <noscript>
