--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,7 @@
     <noscript>
       <strong>We're sorry but vue-cal doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
+    <a id="top" name="top"></a>
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
