--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="Content-language" content="en">
     <meta name="author" content="Antoni André">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <meta name="description" content="A Vue JS full calendar, no dependency, no BS. :metal:">
+    <meta name="description" content="A Vue.js full calendar, no dependency, no BS. :metal:">
     <meta name="keywords" content="Vue full calendar, vue calendar, vue cal, vuecal, vue">
     <meta property="og:locale" content="en_US">
     <meta property="og:site_name" content="Vue Cal">
@@ -15,10 +15,10 @@
     <meta property="og:type" content="article">
     <meta property="article:author" content="Antoni André">
     <meta property="og:title" content="Vue Cal - Documentation">
-    <meta property="og:description" content="Vue Cal is a Full Calendar for Vue JS">
+    <meta property="og:description" content="A Vue.js full calendar, no dependency, no BS. :metal:">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <meta itemprop="name" content="Vue Cal - Documentation">
-    <meta itemprop="description" content="Vue Cal is a Full Calendar for Vue JS">
+    <meta itemprop="description" content="A Vue.js full calendar, no dependency, no BS. :metal:">
     <title>Vue Cal - Documentation</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700|Material+Icons">
     <link href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" rel="stylesheet">
