--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta http-equiv="Content-language" content="en">
     <meta name="author" content="Antoni André">
     <link rel="icon" href="/favicon.ico">
@@ -15,7 +15,6 @@
     <meta property="article:author" content="Antoni André">
     <meta property="og:title" content="Vue Cal - Documentation">
     <meta property="og:description" content="A Vue.js full calendar, no dependency, no BS. :metal:">
-    <title>Vue Cal</title>
     <meta itemprop="name" content="Vue Cal - Documentation">
     <meta itemprop="description" content="A Vue.js full calendar, no dependency, no BS. :metal:">
     <title>Vue Cal - Documentation</title>
