Scroll top after navigating to home + shift anchors up.

--- a/index.html
+++ b/index.html
@@ -19,11 +19,10 @@
     <meta itemprop="description" content="A Vue.js full calendar, no dependency, no BS. :metal:">
     <title>Vue Cal - Documentation</title>
   </head>
-  <body>
+  <body id="top">
     <noscript>
       <strong>We're sorry but vue-cal doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
-    <a id="top"></a>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
