Use 404 page trick for Github pages hosting.

--- a/public/404.html
+++ b/public/404.html
@@ -1,6 +1,29 @@
-<script>
-  (function () {
-    var redirect = window.location.pathname + window.location.search + window.location.hash
-    window.location.replace('/?' + redirect)
-  })()
-</script>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Vue Cal</title>
+  <script>
+    (function () {
+      var path = window.location.pathname
+      var search = window.location.search
+      var hash = window.location.hash
+
+      // Extract repository name from GitHub Pages URL
+      var repoName = '/vue-cal' // Change this to your repo name
+
+      // Ensure it only rewrites if needed
+      if (!path.startsWith(repoName)) repoName = ''
+
+      // Rewrite the URL to index.html within the project directory
+      var newUrl = repoName + '/index.html' + search + hash
+
+      window.location.replace(newUrl)
+    })()
+  </script>
+</head>
+<body>
+
+</body>
+</html>
