Use 404 page trick for Github pages hosting.

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       <strong>We're sorry but vue-cal doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
+    <script type="text/javascript" src="/ghspa.js"></script>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
